--- a/api/.env.example
+++ b/api/.env.example
@@ -3,4 +3,13 @@ API_HOST=0.0.0.0
 API_PORT=8000
 DEBUG=true
 
-# Add your configuration variables here
+# Tesseract OCR Configuration (v2)
+# Windows: C:\Program Files\Tesseract-OCR\tesseract.exe
+# Linux: /usr/bin/tesseract
+# Mac: /usr/local/bin/tesseract
+TESSERACT_CMD=
+
+# Poppler path for PDF processing (required for pdf2image on Windows)
+# Windows: C:\path\to\poppler\bin
+# Linux/Mac: Usually not needed (install via apt/brew)
+POPPLER_PATH=
